# rest-api-prototype

./: README.md  requirements.txt  setup.cfg
community/api/: container.py
community/api/flask/: __init__.py  response.py
community/api/flask/views/: __init__.py  question.py  user.py
community/dao/: __init__.py  community.py
community/dao/models/: __init__.py  question.py  question_bookmark.py  response.py  response_bookmark.py  user.py
community/service/: community.py
community/tests/: conftest.py  test_api.py  test_dao.py  test_service.py
conf/: config.yaml
scripts/mysql/: populate-db.sql  schema-ddl.sql
