[metadata]
name = rest-api-prototype
version = 0.1.0
description = A REST API prototype as an example of separation of concerns design.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
author = Hung Luu
author_email = hung.luu@outlook.com
url = https://github.com/hnluu8/rest-api-prototype
license = MIT
keywords =
    REST, API, prototype

[options]
packages = find:
python_requires = >=3.6, <3.8
zip_safe = False
test_suite = tests
install_requires =
    Flask==1.1.1
    Flask-SQLAlchemy==2.4.1
    Flask-Caching==1.8.0
    PyMySQL==0.9.3
    simplejson==3.17.0
    dependency-injector==3.15.6
    PyYAML==5.3
test_requires =
    docker==4.2.0

[options.extras_require]
test =
    pytest >= 5.0.0
    pytest-cov
